[package]
name = "ksec"
version = "0.1.0"
authors = ["Hikmat Jafarli <jafarlihi@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
capstone = "0.11.0"
clap = { version = "3.2.11", features = ["derive"] }
log = "0.4.17"
neli = "0.6.1"
pretty_env_logger = "0.4.0"
proc-modules = "0.1.0"
procfs = "0.13.2"
x86_64 = "0.14.10"
